[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="TopBar" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0

[node name="SeasonLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "Season: Spring"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DayLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "Day 1"

[node name="WildZoneLegend" type="Label" parent="."]
anchors_preset = 10
anchor_left = 0.5
anchor_right = 0.5
offset_left = -260.0
offset_top = 42.0
offset_right = 260.0
offset_bottom = 72.0
horizontal_alignment = 1
text = "Wild Munchies spawn in glowing colored grass patches."

[node name="GrassHintLabel" type="Label" parent="."]
visible = false
anchors_preset = 10
anchor_left = 0.5
anchor_right = 0.5
offset_left = -220.0
offset_top = 76.0
offset_right = 220.0
offset_bottom = 106.0
horizontal_alignment = 1
text = "Wild Munch Zone: encounter possible."

[node name="ToolBar" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0

[node name="ToolLabel" type="Label" parent="ToolBar"]
layout_mode = 2
text = "Tool: Hands"

[node name="WaterLabel" type="Label" parent="ToolBar"]
layout_mode = 2
text = "Water: 10/10"

[node name="GrassIndicator" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.5, 0.2, 0.15)
mouse_filter = 2

[node name="BattleTransition" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)
mouse_filter = 2
